# aegis-demo-checkpoints

./: .env.example  .gitignore  Makefile  README.md  integreations.md  prd.md  pyproject.toml  sandbox.md
artifacts/checkpoints/: checkpoint_blue_demo_best  ckpt_blue_main_001.json
artifacts/eval_reports/: eval_20260404_073637_001.json  eval_20260404_073716_001.json  eval_20260404_074050_001.json  eval_20260404_075734_001.json  eval_20260404_075944_001.json  eval_cli_1775288461.json  eval_cli_1775289492.json  eval_cli_1775290324.json  eval_report_latest.json
artifacts/exports/: track_a_demo_artifacts_20260404_011312.tgz
backend/app/: cli.py  main.py
frontend/: README.md  package-lock.json  package.json
frontend/scripts/: generate_mock_replay.ts
infra/compose/: docker-compose.yml
infra/docker/: backend.Dockerfile  trainer.Dockerfile
ops/runbooks/: dgx0_no_sudo.md
ops/scripts/: cluster_exec.expect  cluster_sandbox_contract_gate.sh  cluster_ssh.expect  cluster_tunnel.expect  dgx_enterprise_detached.sh  dgx_eval_container.sh  dgx_job_status.sh  dgx_job_tail.sh  dgx_preflight.sh  dgx_train_container.sh  docker_cleanup_project.sh
plans/: README.md  integrations.md  prd.md
plans/partner-handoff/: 01-product-flow.md  02-api-contract.md  03-live-stream-contract.md  04-frontend-integration-checklist.md  cluster-backend-test-report-2026-04-04.md  cluster-backend-test-report-2026-04-05.md  cluster-validation-runbook.md
runs/: .active_run
runs/run_20260404_075707_001/: manifest.json
runs/run_20260404_075733_001/: manifest.json
tests/unit/: test_topology.py  (+11 more)
(+212 files in other folders)
