[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pantherhacks-track-a"
version = "0.1.0"
description = "Track A backend/ML implementation for PantherHacks cyber defense demo"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "orjson>=3.11.0,<4.0.0",
]

[project.optional-dependencies]
rl = [
  "ray[rllib]>=2.30.0,<3.0.0",
]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
